# geometric_derivation

./: CMakeLists.txt
cmake_modules/: AutoBuildDependency.cmake  Install3rdParty.cmake
quaternion/: CMakeLists.txt  quaternion_test.cpp
so3/: CMakeLists.txt  so3_jacobian.py  so3_test.cpp
